--- a/staticfiles/styles.css
+++ b/staticfiles/styles.css
@@ -32,7 +32,7 @@ p, a {
 .nav-links {
     display: flex;
     list-style-type: none;
-    margin-right: -300px; 
+    margin-right: -600px; 
     margin-top: 15px; 
 }
 .nav-links li {
@@ -985,12 +985,6 @@ footer {
     color: inherit; /* Inherit text color */
     display: block; /* Make the anchor fill the project item block */
 }
-
-.unique-project-item-link:hover {
-    text-decoration: none; /* Remove underline from links */
-    color: inherit; /* Inherit text color */
-    display: block; /* Make the anchor fill the project item block */
-}
 .unique-project-item {
     background-color: #222;
     padding: 20px;
@@ -1547,3 +1541,59 @@ footer {
     box-shadow: 0px 6px 15px rgba(0, 0, 0, 0.3); /* Add shadow effect */
 }
 
+/* Notification Dropdown */
+.notification-dropdown {
+    position: relative;
+    display: inline-block;
+    margin-right: 20px; /* Space between notification icon and profile image */
+}
+
+.notification-icon {
+    font-size: 24px;
+    color: white;
+    cursor: pointer;
+    margin-right: 30px; 
+}
+
+.notification-count {
+    background-color: red;
+    color: white;
+    font-size: 12px;
+    border-radius: 50%;
+    padding: 4px 8px;
+    position: absolute;
+    top: -5px;
+    right: -10px;
+}
+
+.notification-dropdown:hover .dropdown-content {
+    display: block;
+}
+
+/* Dropdown Content for Notifications */
+.notification-dropdown .dropdown-content {
+    display: none;
+    position: absolute;
+    background-color: #222;
+    min-width: 250px;
+    box-shadow: 0px 8px 16px rgba(0, 0, 0, 0.2);
+    z-index: 1;
+    border-radius: 5px;
+    padding: 10px;
+}
+
+.notification-dropdown .dropdown-content ul {
+    list-style: none;
+    padding: 0;
+    margin: 0;
+}
+
+.notification-dropdown .dropdown-content li {
+    padding: 10px;
+    color: white;
+    border-bottom: 1px solid #444;
+}
+
+.notification-dropdown .dropdown-content li:hover {
+    background-color: #333;
+}
